public class GlobalStrings
{
    #region Input
    public const string JumpInput = "Jump";
    public const string MoveInput = "Horizontal";
    #endregion

    #region Animation
    public const string XIsInput = "IsXInput";
    public const string GoingFront = "GoingFront";
    public const string IsGrounded = "IsGrounded";
    public const string IsRunning = "IsRunning";
    public const string YVelocity = "YVelocity";

    public const string MinigunSpeed = "MinigunSpeed";
    public const string PlayerAnimationSpeed = "PlayerAnimationSpeed";
    public const string PlayerAnimationWalkSpeed = "PlayerAnimationWalkSpeed";

    public const string Burst = "Burst";
    public const string Recharge = "RechargeSpeed";
    public const string Discharge = "DischargeSpeed";
    #endregion

    #region Sound
    public const string Music = "Music";
    public const string SFX = "SFX";
    #endregion
}
